# quick-process-killer-tui

./: Cargo.toml  LICENSE  README.md
src/: main.rs
